[PSym] Update pom
Minor updates for setting up for maven central release